Fixed the scrollbars and arrows on webkit based browsers
Why can't all browsers just work like Firefox?

--- a/src/index.sass
+++ b/src/index.sass
@@ -1,3 +1,6 @@
+$mask-image: linear-gradient(180deg,white var(--axis),transparent var(--axis)),url(../assets/arrow.svg)
+$mask-size:  100%, 60% auto
+$mask-position: 0 0, 50% var(--arrow)
 :root
     --axis: calc(18pt * 3)
     --arrow: calc(var(--axis) + 4px)
@@ -5,10 +8,14 @@
 
 .expl-axis
     background: linear-gradient(180deg,transparent var(--axis),var(--arrow-color) var(--axis))
-    mask-image: linear-gradient(180deg,white var(--axis),transparent var(--axis)),url(../assets/arrow.svg)
+    mask-image: $mask-image
+    -webkit-mask-image: $mask-image
     mask-repeat: no-repeat
-    mask-size: 100%, 60% auto
-    mask-position: 0 0, 50% var(--arrow)
+    -webkit-mask-repeat: no-repeat
+    mask-size: $mask-size
+    -webkit-mask-size: $mask-size
+    mask-position: $mask-position
+    -webkit-mask-position: $mask-position
 
 .arrows
     display: none
